Add watcher for MetalLB

--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -313,6 +313,9 @@ watchers:
       - 3\.[0-9]\..*
       - 3\.1[0-2]\..*
   - type: github_release
+    repo: metallb/metallb
+    release: v0.9.6
+  - type: github_release
     repo: kubernetes/ingress-nginx
     release: controller-v0.44.0
     includes:
