--- a/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/service-handler.yaml.j2
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/service-handler.yaml.j2
@@ -7,11 +7,12 @@ metadata:
     {{ lemonldap.labels_def | to_nice_yaml() | indent(4) }}
     {{ lemonldap.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
-  type: NodePort
+  type: LoadBalancer
+  loadBalancerIP: {{ kubernetes_ingress_lemonLdap_handler_lb_ip }}
+  externalTrafficPolicy: Local
   ports:
     - port: {{ lemonldap.fastcgi_port }}
       targetPort: {{ lemonldap.fastcgi_port }}
       name: fastcgi
-      nodePort: {{ kubernetes_ingress_lemonLdap_handler_port }}
   selector:
     {{ lemonldap.labels_def | to_nice_yaml() | indent(4) }}
