--- a/ansible/install_applications/roles/auth-openldap.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/auth-openldap.deploy/app/deploy/service.yaml.j2
@@ -7,6 +7,9 @@ metadata:
     {{ openldap.labels_def | to_nice_yaml() | indent(4) }}
     {{ openldap.labels_desc | to_nice_yaml() | indent(4) }}
 spec:
+  type: LoadBalancer
+  loadBalancerIP: {{ kubernetes_ingress_openldap_lb_ip }}
+  externalTrafficPolicy: Local
   ports:
   - port: 389
     name: ldap
