--- a/ansible/install_applications/roles/infra-pihole.deploy/app/deploy/service-dns.yaml.j2
+++ b/ansible/install_applications/roles/infra-pihole.deploy/app/deploy/service-dns.yaml.j2
@@ -1,23 +1,45 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: pihole-dns
+  name: pihole-dns-udp
   namespace: {{ pihole.namespace }}
   labels:
     {{ pihole.labels_def | to_nice_yaml() | indent(4) }}
     {{ pihole.labels_desc | to_nice_yaml() | indent(4) }}
+  annotations:
+    metallb.universe.tf/allow-shared-ip: pihole
 spec:
-  type: NodePort
+  type: LoadBalancer
+  loadBalancerIP: {{ kubernetes_ingress_pihole_lb_ip }}
+  externalTrafficPolicy: Local
   ports:
-    - name: dns
-      port: 53
-      targetPort: dns
-      protocol: TCP
-      nodePort: {{ kubernetes_pihole_tcp_port }}
     - name: dns-udp
-      port: 53
+      port: {{ kubernetes_pihole_tcp_port }}
       targetPort: dns-udp
       protocol: UDP
-      nodePort: {{ kubernetes_pihole_udp_port }}
+  selector:
+    {{ pihole.labels_def | to_nice_yaml() | indent(4) }}
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: pihole-dns-tcp
+  namespace: {{ pihole.namespace }}
+  labels:
+    {{ pihole.labels_def | to_nice_yaml() | indent(4) }}
+    {{ pihole.labels_desc | to_nice_yaml() | indent(4) }}
+  annotations:
+    metallb.universe.tf/allow-shared-ip: pihole
+spec:
+  type: LoadBalancer
+  loadBalancerIP: {{ kubernetes_ingress_pihole_lb_ip }}
+  externalTrafficPolicy: Local
+  ports:
+    - name: dns
+      port: {{ kubernetes_pihole_tcp_port }}
+      targetPort: dns
+      protocol: TCP
   selector:
     {{ pihole.labels_def | to_nice_yaml() | indent(4) }}
