Move home-openzwave to general-purpose nodes

--- a/ansible/install_applications/roles/home-openzwave.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/home-openzwave.deploy/app/deploy/statefulSet.yaml.j2
@@ -103,7 +103,7 @@ spec:
       imagePullSecrets:
       - name: docker-config
       nodeSelector:
-        capability/home: 'yes'
+        capability/general-purpose: 'yes'
   volumeClaimTemplates:
   - metadata:
       name: openzwave-pv-claim
