Configure number of jobs in web-ttrss-job

--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-web-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-web-statefulSet.yaml.j2
@@ -76,6 +76,8 @@ spec:
           value: "{{ ttrss.smtp.displayName }}"
         - name: TTRSS_SMTP_FROM_ADDRESS
           value: "{{ ttrss.smtp.from }}"
+        - name: TTRSS_DAEMON_MAX_JOBS
+          value: "{{ ttrss.daemon.max_jobs }}"
         - name: TTRSS_PLUGINS
           value: "data_migration, auth_ldap, note, mailer_smtp"        
         ports:
