--- a/ansible/install_applications/roles/logging-kibana.deploy/app/kibana_save_objects.py.j2
+++ b/ansible/install_applications/roles/logging-kibana.deploy/app/kibana_save_objects.py.j2
@@ -6,7 +6,7 @@ import os
 import shutil
 from base64 import b64encode
 
-kibana_root_url = "http://{{ groups['kubernetes_nodes'][0] }}:{{ kubernetes_ingress_http_port }}{{ kibana.context_path }}"
+kibana_root_url = "http://{{ kubernetes_nginx_ingress_lb_ip }}:{{ kubernetes_ingress_http_port }}{{ kibana.context_path }}"
 output_dir = "{{ kibana.export_saved.output_dir }}"
 
 headers = {
