--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/templates/logstash_policy.json.j2
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/templates/logstash_policy.json.j2
@@ -42,6 +42,10 @@
                 }],
                 "transitions": []
             }
-        ]
+        ],
+        "ism_template": {
+            "index_patterns": ["logstash-*"],
+            "priority": 100
+        }
     }
 }
