--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -374,7 +374,7 @@ watchers:
     includes:
       - ^v[0-9]+\.[0-9]+\.[0-9]+
     excludes:
-      - ^v1\.1[0-7]\.
+      - ^v[1-2]\.
   - name: "ZoneMTA Redis"
     type: docker_registry
     repo: {{ zonemta_redis.base_image.repo | default('registry-1.docker.io') }}
@@ -382,6 +382,8 @@ watchers:
     tag: {{ zonemta_redis.base_image.tag }}
     includes:
       - "[6-9]\\.[0-9]+\\.[0-9]+.*alpine[0-9]+\\.[0-9][0-9]"
+    excludes:
+      - ^6\.[0-1]\.
   - name: "ZoneMTA Mongo"
     type: docker_registry
     repo: {{ zonemta_mongo.base_image.repo | default('registry-1.docker.io') }}
