--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/deployment.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/operator/deployment.yaml.j2
@@ -13,6 +13,8 @@ spec:
       {{ prometheus_operator.labels_def | to_nice_yaml() | indent(6) }}
   template:
     metadata:
+      annotations:
+        kubectl.kubernetes.io/default-container: prometheus-operator
       labels:
         {{ prometheus_operator.labels_def | to_nice_yaml() | indent(8) }}
         {{ prometheus_operator.labels_desc | to_nice_yaml() | indent(8) }}
