--- a/ansible/install_infra/roles/backup-restic/templates/_restic.sh.j2
+++ b/ansible/install_infra/roles/backup-restic/templates/_restic.sh.j2
@@ -6,7 +6,7 @@ function init_repo_if_necessary() {
     echo ""
     echo "Testing if the repository already exists : ${RESTIC_REPOSITORY}"
 
-    restic stats
+    {{ restic_bin_path }} snapshots --last
     restic_repo_status=$?
 
     if [ $restic_repo_status -eq 0 ] ; then
@@ -15,6 +15,6 @@ function init_repo_if_necessary() {
     else
         echo ""
         echo "Repository doesn't exists, creating"
-        restic init
+        {{ restic_bin_path }} init
     fi
 }
