Fix repo label on backups

--- a/ansible/install_applications/roles/_base.deploy/templates/app_backup.sh.j2
+++ b/ansible/install_applications/roles/_base.deploy/templates/app_backup.sh.j2
@@ -20,7 +20,7 @@ source ${BACKUP_SCRIPTS_DIR}/_prometheus.sh
 PROMETHEUS_OUTPUT_FILE="${PROMETHEUS_OUTPUT_DIR}/backup_app_${APP_NAME}.prom"
 PROMETHEUS_OUTPUT_FILE_TMP=${PROMETHEUS_OUTPUT_FILE}.new
 PROMETHEUS_LABEL_TYPE="restic"
-PROMETHEUS_LABEL_REPO="apps"
+PROMETHEUS_LABEL_REPO="{{ app_backup.repository.name }}"
 PROMETHEUS_COMMON_LABELS="host=\"${FAKE_HOST_NAME}\",type=\"${PROMETHEUS_LABEL_TYPE}\",repo=\"${PROMETHEUS_LABEL_REPO}\""
 
 app_status=0
