--- a/ansible/install_infra/roles/backup-restic/templates/restic_backup_apps.sh.j2
+++ b/ansible/install_infra/roles/backup-restic/templates/restic_backup_apps.sh.j2
@@ -12,7 +12,7 @@ source ${BACKUP_SCRIPTS_DIR}/_prometheus.sh
 PROMETHEUS_OUTPUT_FILE="${PROMETHEUS_OUTPUT_DIR}/backup_apps.prom"
 PROMETHEUS_OUTPUT_FILE_TMP=${PROMETHEUS_OUTPUT_FILE}.new
 PROMETHEUS_LABEL_TYPE="restic"
-PROMETHEUS_LABEL_REPO="apps"
+PROMETHEUS_LABEL_REPO="{{ restic_apps_backup_repository.name }}"
 PROMETHEUS_COMMON_LABELS="host=\"${FAKE_HOST_NAME}\",type=\"${PROMETHEUS_LABEL_TYPE}\",repo=\"${PROMETHEUS_LABEL_REPO}\""
 
 job_start=$(date +%s)
