--- a/ansible/install_infra/roles/backup-restic/templates/restic_backup_host.sh.j2
+++ b/ansible/install_infra/roles/backup-restic/templates/restic_backup_host.sh.j2
@@ -15,7 +15,7 @@ PROMETHEUS_OUTPUT_FILE="${PROMETHEUS_OUTPUT_DIR}/backup_restic_host.prom"
 PROMETHEUS_OUTPUT_FILE_TMP=${PROMETHEUS_OUTPUT_FILE}.new
 PROMETHEUS_LABEL_HOST=$(hostname)
 PROMETHEUS_LABEL_TYPE="restic"
-PROMETHEUS_LABEL_REPO="hosts"
+PROMETHEUS_LABEL_REPO="{{ restic_host_backup_repository.name }}"
 PROMETHEUS_COMMON_LABELS="host=\"${PROMETHEUS_LABEL_HOST}\",type=\"${PROMETHEUS_LABEL_TYPE}\",repo=\"${PROMETHEUS_LABEL_REPO}\""
 
 job_start=$(date +%s)
