Add TheTVDB plugin

--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -644,6 +644,9 @@ watchers:
   - type: github_tag
     repo: jellyfin/jellyfin-plugin-ldapauth
     tag: {{ jellyfin.plugins.ldapauth.version }}
+  - type: github_tag
+    repo: jellyfin/jellyfin-plugin-tvdb
+    tag: {{ jellyfin.plugins.thetvdb.version }}
   
   ##############
   # Apps : Web #
