Improve start time by avoiding to chown the whole folder

--- a/ansible/install_applications/roles/stream-jellyfin.deploy/app/deploy/statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/stream-jellyfin.deploy/app/deploy/statefulSet.yaml.j2
@@ -30,7 +30,8 @@ spec:
           - |
             mkdir -p /jellyfin/config
             mkdir -p /jellyfin/cache
-            chown -R 1000:1000 /jellyfin
+            chown 1000:1000 /jellyfin/config
+            chown 1000:1000 /jellyfin/cache
         volumeMounts:
         - name: jellyfin-pv-claim
           mountPath: /jellyfin
