Update ingress version to networking.k8s.io/v1

--- a/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/ingress-manager.yaml.j2
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/ingress-manager.yaml.j2
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: lemonldap-manager
@@ -19,10 +19,16 @@ spec:
     http:
       paths:
       - path: /lemonldap/?(.*)
+        pathType: Prefix
         backend:
-          serviceName: lemonldap
-          servicePort: http
+          service:
+            name: lemonldap
+            port:
+              name: http
       - path: /((static/|doc/|manager.psgi).*)
+        pathType: Prefix
         backend:
-          serviceName: lemonldap
-          servicePort: http
+          service:
+            name: lemonldap
+            port:
+              name: http
