--- a/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/ingress-auth.yaml.j2
+++ b/ansible/install_applications/roles/auth-lemonldap.deploy/app/deploy/ingress-auth.yaml.j2
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: lemonldap-auth
@@ -16,6 +16,9 @@ spec:
     http:
       paths:
       - path: /
+        pathType: Prefix
         backend:
-          serviceName: lemonldap
-          servicePort: http
+          service:
+            name: lemonldap
+            port:
+              name: http
