--- a/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/dev-gitlab.deploy/app/deploy/ingress.yaml.j2
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: gitlab
@@ -15,7 +15,10 @@ spec:
   - host: dev.{{ web_base_domain }}
     http:
       paths:
-        - path: {{ gitlab.context_path }}
-          backend:
-            serviceName: gitlab
-            servicePort: 80
+      - path: {{ gitlab.context_path }}
+        pathType: Prefix
+        backend:
+          service:
+            name: gitlab
+            port:
+              number: 80
