--- a/ansible/install_applications/roles/download-pyload.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/download-pyload.deploy/app/deploy/ingress.yaml.j2
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: pyload
@@ -15,7 +15,10 @@ spec:
   - host: dl.{{ web_base_domain }}
     http:
       paths:
-        - path: {{ pyload.context_root }}
-          backend:
-            serviceName: pyload
-            servicePort: 80
+      - path: {{ pyload.context_root }}
+        pathType: Prefix
+        backend:
+          service:
+            name: pyload
+            port:
+              number: 80
