--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/ingress.yaml.j2
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: sabnzbd
@@ -16,6 +16,9 @@ spec:
     http:
       paths:
       - path: {{ sabnzbd.context_root }}
+        pathType: Prefix
         backend:
-          serviceName: sabnzbd
-          servicePort: 80
+          service:
+            name: sabnzbd
+            port:
+              number: 80
