--- a/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/home-homeassistant.deploy/app/deploy/ingress.yaml.j2
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: homeassistant
@@ -15,7 +15,10 @@ spec:
   - host: home.{{ web_base_domain }}
     http:
       paths:
-        - path: /
-          backend:
-            serviceName: homeassistant
-            servicePort: 80
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: homeassistant
+            port:
+              number: 80
