--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/ingress.yaml.j2
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: docker-registry
@@ -19,7 +19,10 @@ spec:
   - host: registry.{{ web_base_domain }}
     http:
       paths:
-        - path: /
-          backend:
-            serviceName: docker-registry
-            servicePort: https
+      - path: /
+        pathType: Prefix
+        backend:
+          service:
+            name: docker-registry
+            port:
+              name: https
