--- a/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/ingress.yaml.j2
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: mailhog
@@ -15,7 +15,10 @@ spec:
   - host: infra.{{ web_base_domain }}
     http:
       paths:
-        - path: /mailhog/?(.*)
-          backend:
-            serviceName: mailhog
-            servicePort: http
+      - path: /mailhog/?(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: mailhog
+            port:
+              name: http
