--- a/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/ingress.yaml.j2
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: kibana
@@ -15,7 +15,10 @@ spec:
   - host: infra.{{ web_base_domain }}
     http:
       paths:
-        - path: {{ kibana.context_path }}
-          backend:
-            serviceName: kibana
-            servicePort: 5601
+      - path: {{ kibana.context_path }}
+        pathType: Prefix
+        backend:
+          service:
+            name: kibana
+            port:
+              number: 5601
