--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/deploy/ingress.yaml.j2
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: grafana
@@ -17,7 +17,10 @@ spec:
   - host: infra.{{ web_base_domain }}
     http:
       paths:
-        - path: /grafana/?(.*)
-          backend:
-            serviceName: grafana
-            servicePort: 3000
+      - path: /grafana/?(.*)
+        pathType: Prefix
+        backend:
+          service:
+            name: grafana
+            port:
+              number: 3000
