Increase timeout on infra-zonemta mongodb probe

--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongdb-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongdb-statefulSet.yaml.j2
@@ -64,6 +64,7 @@ spec:
             - mongo
             - --eval
             - "db.adminCommand('ping')"
+          timeoutSeconds: 5
           initialDelaySeconds: 10
           periodSeconds: 10
         resources:
