Switch restic systemd timers to Persistent=false

--- a/ansible/install_infra/roles/backup-restic/templates/systemd/restic_backup_apps.timer.j2
+++ b/ansible/install_infra/roles/backup-restic/templates/systemd/restic_backup_apps.timer.j2
@@ -7,7 +7,7 @@ Requires=restic_backup_apps.service
 [Timer]
 Unit=restic_backup_apps.service
 OnCalendar={{ restic_backup_apps_timer }}
-Persistent=true
+Persistent=false
 
 [Install]
 WantedBy=timers.target
