Fix metallb watcher

--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -315,6 +315,8 @@ watchers:
   - type: github_release
     repo: metallb/metallb
     release: v0.10.2
+    excludes:
+      - metallb-chart-.*     
   - type: github_release
     repo: kubernetes/ingress-nginx
     release: controller-v0.47.0
