--- a/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-release-watcher.deploy/app/config/watchers.yaml.j2
@@ -403,7 +403,7 @@ watchers:
     includes:
       - 12\.[0-9]+\.[0-9]+-alpine[0-9]+\.[0-9][0-9]
     excludes:
-      - .*-alpine3.1[01]
+      - .*-alpine3.1[0-3]
       - 12\.[0-9]\..*
       - 12\.1[0-7]\..*
   - type: docker_registry
