Migrate all domains

--- a/ansible/install_applications/roles/infra-pihole.deploy/app/config/05-custom.conf.j2
+++ b/ansible/install_applications/roles/infra-pihole.deploy/app/config/05-custom.conf.j2
@@ -8,3 +8,7 @@ addn-hosts=/etc/dnsmasq_hosts
 
 # Resolve Kubernetes services
 server=/cluster.local/10.96.0.10
+
+{% for domain in dns_static_domains %}
+address=/{{ domain.name }}/{{ domain.ip }}
+{% endfor %}
