--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/ingress.yaml.j2
@@ -13,10 +13,10 @@ metadata:
 spec:
   tls:
     - hosts:
-      - registry.{{ web_base_domain }}
+      - registry.intra.{{ web_base_domain }}
       secretName: ingress-tls
   rules:
-  - host: registry.{{ web_base_domain }}
+  - host: registry.intra.{{ web_base_domain }}
     http:
       paths:
       - path: /
